fixed z-index issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,8 +56,16 @@ body {
 
 /* custom styles -------------------------------------------------------------------------------------------- */
 
-.z-max {
+.z-max-0 {
+    z-index: 100000 !important;
+}
+
+.z-max-1 {
     z-index: 99999 !important;
+}
+
+.z-max-2 {
+    z-index: 99998 !important;
 }
 
 .vh-90 {
