--- a/assets/css/mousefollower.css
+++ b/assets/css/mousefollower.css
@@ -3,7 +3,6 @@
   --border-color: #fff;
   --text-color: #fff;
   --bg-color: #000;
-  --z-max: 100000;
 
   top: 0;
   left: 0;
@@ -19,7 +18,6 @@
   background: var(--bg-color);
   will-change: transform;
   pointer-events: none;
-  z-index: var(--z-max);
 }
 
 /* custom default cursor */
@@ -36,7 +34,7 @@
   background-color: #ffffff4e;
   will-change: transform;
   pointer-events: none;
-  z-index: 100;
+  z-index: 1;
 }
 
 /* cursor when hovering gallery */
